project(easyTCTool)
file(GLOB SRC_CPP base/*cpp network/*.cpp )

# add_library(${PROJECT_NAME} SHARED ${SRC_CPP})
add_library(${PROJECT_NAME} STATIC ${SRC_CPP})

include(GNUInstallDirs)
install(TARGETS ${PROJECT_NAME}
    LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/${PROJECT_NAME}
    RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/${PROJECT_NAME}
)